--- a/env.yaml
+++ b/env.yaml
@@ -113,6 +113,7 @@ dependencies:
   - pip:
       - absl-py==2.0.0
       - adamp==0.3.0
+      - affine==2.4.0
       - aiohttp==3.8.6
       - aiosignal==1.3.1
       - antlr4-python3-runtime==4.9.3
@@ -121,6 +122,8 @@ dependencies:
       - black==21.4b2
       - cachetools==5.3.1
       - click==8.1.7
+      - click-plugins==1.1.1
+      - cligj==0.7.2
       - cloudpickle==3.0.0
       - colorama==0.4.6
       - contourpy==1.1.0
@@ -139,6 +142,7 @@ dependencies:
       - google-auth==2.23.3
       - google-auth-oauthlib==1.1.0
       - grpcio==1.59.0
+      - h5py==3.10.0
       - hydra-core==1.3.2
       - imageio==2.31.3
       - importlib-metadata==6.8.0
@@ -171,6 +175,7 @@ dependencies:
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
       - pytorch-lightning==2.1.0
+      - rasterio==1.3.9
       - regex==2023.10.3
       - requests-oauthlib==1.3.1
       - rsa==4.9
@@ -179,6 +184,7 @@ dependencies:
       - setproctitle==1.3.3
       - sklearn==0.0.post10
       - smmap==5.0.0
+      - snuggs==1.4.7
       - tabulate==0.9.0
       - tensorboard==2.15.0
       - tensorboard-data-server==0.7.1
